tests/type/errors/bad_primitive2.xi
foo() {
    x:bool = 1
}